# mushy

./: Cargo.toml  LICENSE  README.md  config.toml  justfile  spawn.sh
src/: cli.rs  config.rs  daemon.rs  image_processing.rs  main.rs  terminal.rs
