[package]
name = "mushy"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.26.1"
image = "0.24.6"
gif = "0.11.4"
base64 = "0.13.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
directories = "6.0.0"
libc = "0.2.186"
clap = { version = "4.6.1", features = ["derive"] }
